--- a/src/styles.css
+++ b/src/styles.css
@@ -1,49 +1,49 @@
 body {
-    font-family: "proxima-nova","Helvetica Neue",Helvetica,Arial,sans-serif;
-    background: black;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  font-family: 'Roboto', sans-serif;
+  background: black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .App {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .panel {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .panel h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
-.canvas {    
-    display: flex;
-    flex-wrap: wrap;
-    width: 512px;
-    height: 512px;
+.canvas {
+  display: flex;
+  flex-wrap: wrap;
+  width: 512px;
+  height: 512px;
 }
 
 .pixel {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
 }
 
 #clear {
-    width: 100px;
+  width: 100px;
 }
 
 #save-img {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
