--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -17,7 +17,7 @@ body {
   align-items: center;
 }
 
-// TODO make panel separate component
+// TODO make panel separate component .
 .panel {
   display: flex;
   flex-direction: column;
