Rehaul layout of the page
Note: for now it is pretty rought

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -1,6 +1,6 @@
 @use 'colors';
 
-.btn__primary {
+.btn--primary {
   border: 2px solid colors.$secondary;
   border-radius: 10px;
   outline: none;
