--- a/src/components/Canvas/Canvas.module.scss
+++ b/src/components/Canvas/Canvas.module.scss
@@ -1,6 +1,20 @@
 .container {
+  flex-grow: 1;
+}
+
+.canvas {
   display: flex;
   flex-wrap: wrap;
+  margin: 10px auto;
   width: 512px;
   height: 512px;
+}
+
+.background {
+  display: none;
+  width: 512px;
+  height: 512px;
+  // background: linear-gradient(to left, #eee, #555);
+  background: repeating-conic-gradient(#808080 0% 25%, transparent 0% 50%) 
+      50% / 20px 20px
 }
