--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -5,32 +5,28 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  margin: 0;
+  height:100%;
+  width: 100%;
   background: black;
   font-family: 'Roboto', sans-serif;
   color: white;
 }
 
-.App {
+// .App {
+
+// }
+
+.app-content {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
+  width: 100vw;
 }
 
 // TODO make panel separate component
-.panel {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 2rem;
-  text-align: center;
-}
-
-.panel h1 {
+h1 {
   font-size: 3rem;
-}
-
-#save-img {
-  margin-top: 2rem;
+  margin: 0;
 }
