--- a/src/components/Canvas/Canvas.module.scss
+++ b/src/components/Canvas/Canvas.module.scss
@@ -1,11 +1,14 @@
 .container {
+  display: flex;
+  font-display: column;
+  justify-content: center;
   flex-grow: 1;
 }
 
 .canvas {
   display: flex;
   flex-wrap: wrap;
-  margin: 10px auto;
+  margin: auto;
   width: 512px;
   height: 512px;
 }
@@ -14,7 +17,7 @@
   display: none;
   width: 512px;
   height: 512px;
-  // background: linear-gradient(to left, #eee, #555);
+  /* background: linear-gradient(to left, #eee, #555); */
   background: repeating-conic-gradient(#808080 0% 25%, transparent 0% 50%) 
       50% / 20px 20px
 }
