--- a/src/styles/global-styles.scss
+++ b/src/styles/global-styles.scss
@@ -1,31 +1,47 @@
 @use 'colors';
 @use 'buttons';
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  margin: 0;
-  height:100%;
-  width: 100%;
+  /* overflow: hidden; */
   background: black;
   font-family: 'Roboto', sans-serif;
   color: white;
 }
 
-// .App {
-
-// }
+.App {
+  display: flex;
+  flex-direction: column;
+  border: solid white;
+  min-height: 100%;
+}
 
 .app-content {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  width: 100vw;
+  flex-grow: 1;
 }
 
-// TODO make panel separate component
+/* TODO make panel separate component */
 h1 {
   font-size: 3rem;
   margin: 0;
