--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,2 +1,5 @@
-$primary: #000;
-$secondary: #fff;
+$primary: hsl(0deg, 0%, 0%);
+$secondary: hsl(0deg, 0%, 100%);
+
+$grey--very-dark: hsl(0deg, 0%, 10%); 
+$grey--dark: hsl(0deg, 0%, 25%);
